[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
sha2 = { version = "0.10", optional = true }
semver = { version = "1", features = ["serde"], optional = true }

[dev-dependencies]
serde_test = "1"
